# exercises

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  sonar-project.properties
.trunk/: trunk.yaml
R/: ex1.R  ex2.R  ex3.R  test.ext.R
src/exercises/: armstrongNumber.py  classPessoa.py  complexNumber.py  ex1.py  ex3.py  ex5.py  gradeSchool.py  listOperators.py  maxPrimeFactor.py  multiplier.py  rationalNumber.py  sumFibonacci.py
tests/: test_armstrongNumber.py  test_atBashCipher.py  test_binarySearch.py  test_complexNumber.py  test_ex1.py  test_ex3.py  test_ex5.py  test_gradeSchool.py  test_id1.py  test_listOperators.py  test_maxPrimeNumber.py  test_multiplier.py  test_rationalNumber.py  test_sumFibonacci.py
